# MCT344s_Project

./: .gitignore  README.md
docs/design/: concept_selection.md  functional_decomposition.md  system_architecture.md  triz_worksheet.md
docs/requirements/: competition_interpretation.md  requirements_spec.md  responsibility_matrix.md  risk_assessment.md
firmware/arm_controller/: CMakeLists.txt  sdkconfig.defaults
firmware/arm_controller/main/: CMakeLists.txt  arm_kinematics.c  arm_kinematics.h  comm_interface.c  comm_interface.h  gripper.c  gripper.h  main.c  servo_control.c  servo_control.h
firmware/base_controller/: CMakeLists.txt  sdkconfig.defaults
firmware/base_controller/main/: CMakeLists.txt  comm_interface.c  comm_interface.h  imu_driver.c  imu_driver.h  kinematics.c  kinematics.h  main.c  motor_control.c  motor_control.h  odometry.c  odometry.h  pid_controller.c  pid_controller.h
hardware/mechanical/bom/: bom.md
software/Matlab&Simulink/: .gitignore  README.md  startup_omni.m
software/Matlab&Simulink/01_Config/: config_hardware.m
software/Matlab&Simulink/02_Kinematics/: inverse_kinematics.m
software/Matlab&Simulink/03_Control/: apply_motor_limits.m
software/Matlab&Simulink/04_Tests/: test_pure_rotation.m  test_pure_x_motion.m  test_pure_y_motion.m
software/Matlab&Simulink/Simulink_Analysis/: PID_tuning.slx
software/master_node/: requirements.txt
software/master_node/config/: robot_params.yaml
software/master_node/src/: main.py
software/master_node/src/communication/: protocol.py  serial_bridge.py
tools/scripts/: actuator_sizing.py
(+5 files in other folders)
